add a profile that'll delombok and gen javadocs w/ UML diagrams

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,64 @@
 		</dependency>
 	</dependencies>
 
+    <profiles>
+        <profile>
+            <id>javadoc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok-maven-plugin</artifactId>
+                        <version>1.18.12.0</version>
+                        <executions>
+                            <execution>
+                                <id>delombok</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>delombok</goal>
+                                </goals>
+                                <configuration>
+                                    <addOutputDirectory>false</addOutputDirectory>
+                                    <sourceDirectory>src/main/java</sourceDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
+                                    <docletArtifact>
+                                        <groupId>nl.talsmasoftware</groupId>
+                                        <artifactId>umldoclet</artifactId>
+                                        <version>2.0.8</version>
+                                    </docletArtifact>
+                                    <sourcepath>target/generated-sources/delombok</sourcepath>
+                                    <additionalOptions>
+                                        <additionalOption>--uml-image-format svg,png</additionalOption>
+                                        <additionalOption>--uml-java-bean-properties-as-fields</additionalOption>
+                                    </additionalOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 	<build>
 		<plugins>
 			<plugin>
