switch to Postgres and switch DDL from generate to validate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,21 @@ spring:
       auto-commit: false
   jpa:
     open-in-view: false
+    generate-ddl: false
+    hibernate:
+      ddl-auto: validate
     properties:
       hibernate:
         connection:
           provider_disables_autocommit: true
-foodinger.public-url: / # where 'index.html' lives from the UA's perspective
+        jdbc:
+          lob:
+            non_contextual_creation: true
+  mvc:
+    throw-exception-if-no-handler-found: true
+foodinger:
+  public-url: / # where 'index.html' lives from the UA's perspective
+
 # FIRST, copy this hunk to application-default.yml and uncomment it. Don't change it here.
 #
 # Then go create a GitHub OAuth app w/
